# mcp_2_the_max

./: .env .example  README.md  pyproject.toml
00-tools/: README.md  client.py  server.py
01-quickstart/: client.py  server.py
01-routes/: README.md  client.py  server.py
02-resources/: README.md  client.py  server.py
03-prompts/: README.md  client.py  server.py
04-context/: README.md  client.py  server.py
05-composition/: README.md  client.py  server.py  weather_server.py
06-elicitation/: README.md  client.py  server.py
07-logging/: README.md  client.py  server.py
08-progress/: README.md  client.py  server.py
09-Sampling/: README.md  client.py  server.py
10-roots/: README.md  client.py  poem.txt  server.py
11-azure_auth/: README.md  client.py  server.py
12-cancellation/: README.md  client.py  server.py
13-agentic_flow/: README.md  client.py  trader_server.py  triage_server.py
15-langchain_agent/: README.md  client.py  trader_server.py  triage_server.py
